--- a/accounts/templates/fgtpwdab.html
+++ b/accounts/templates/fgtpwdab.html
@@ -1,54 +1,90 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>Password Reset Sent</title>
     {% load static %}
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/log.css' %}">
-    <link rel="stylesheet" href="{% static 'js/log.js' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <style>
+      .bg-video video {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        z-index: -10;
+      }
+
+      .form-wrap {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        z-index: 1;
+      }
+
+      .login-register {
+        background: rgba(255, 255, 255, 0.1); /* Transparent background */
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        max-width: 400px;
+        width: 100%;
+      }
+
+      .form-header {
+        text-align: center;
+        margin-bottom: 20px;
+      }
+
+      .form-header h2 {
+        margin-bottom: 10px;
+      }
+
+      .form-header p {
+        margin-bottom: 5px;
+      }
+            .bg-img {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+      }
+
+      .bg-img img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    </style>
   </head>
   <body>
-    {% load static %}
-      <div class="formwarp" >
-  <div class="login-register">
-    <div class="login form" style="background-color: rgb(56, 180, 180);">
-      <form action="" method="post">
-        {% csrf_token %}
-        {% if error %}
-        <script>
-            alert("Invalid credentials");
-        </script>
-        {% endif %}
-        
-        <div class="form-header">
-          <!-- <img src="{% static 'images/demo.png' %}" alt="logo"> -->
-          <h2>Password reset sent</h2>
-          <p><b>We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.
-          </b></p>
-          <p><b>If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder.</b></p>
+      <div class="bg-img">
+      <img src="{% static 'images/bg2.jpg' %}" alt="no image">
+    </div>
+    <div class="form-wrap">
+      <div class="login-register">
+        <div class="login form" style="background-color: rgb(56, 180, 180);">
+          <form action="" method="post">
+            {% csrf_token %}
+            {% if error %}
+            <script>
+              alert("Invalid credentials");
+            </script>
+            {% endif %}
+            <div class="form-header">
+              <h2>Password Reset Sent</h2>
+              <p><b>We’ve emailed you instructions for setting your password, if an account exists with the email you entered. You should receive them shortly.</b></p>
+              <p><b>If you don’t receive an email, please make sure you’ve entered the address you registered with, and check your spam folder.</b></p>
+            </div>
+          </form>
         </div>
-       
-
-          <!-- <p class="forgot-password"><a href="#">Forgot password?</a></p> -->
-        </div>
-      
-      </form>
-
-
-    
-  </div>
-  </div>
-</div>
-
-    
+      </div>
+    </div>
   </body>
 </html>
