--- a/accounts/templates/frpwd1.html
+++ b/accounts/templates/frpwd1.html
@@ -1,52 +1,104 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <title>Title</title>
+    <title>Password Reset</title>
     {% load static %}
-    <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
-    <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'css/log.css' %}">
-    <link rel="stylesheet" href="{% static 'js/log.js' %}">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
+    <style>
+      .bg-video video {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+        z-index: -10;
+      }
+
+      .form-wrap {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 100vh;
+        z-index: 1;
+      }
+
+      .login-register {
+        background: rgba(255, 255, 255, 0.1); /* Transparent background */
+        padding: 20px;
+        border-radius: 10px;
+        box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+        max-width: 400px;
+        width: 100%;
+      }
+
+      .form-header {
+        text-align: center;
+        margin-bottom: 20px;
+      }
+
+      .form-header p {
+        margin-bottom: 5px;
+      }
+
+      .form-group {
+        margin-bottom: 15px;
+      }
+
+      .form-group label {
+        font-weight: bold;
+      }
+
+      .btn-block {
+        background-color: #17a2b8;
+        color: white;
+      }
+            .bg-img {
+        position: fixed;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+        z-index: -1;
+      }
+
+      .bg-img img {
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+      }
+    </style>
   </head>
   <body>
-      <div class="formwarp">
-  <div class="login-register">
-    <div class="login form">
-      <form action="" method="post">
-        {% csrf_token %}
-        {% if error %}
-        <script>
-            alert("Invalid credentials");
-        </script>
-        {% endif %}
-        <div class="form-header">
-            <p><b>Forgotten your password? Enter your email address below, and we'll email instructions for setting a new one.</b></p>
+      <div class="bg-img">
+      <img src="{% static 'images/bg2.jpg' %}" alt="no image">
+    </div>
+    <div class="form-wrap">
+      <div class="login-register">
+        <div class="login form">
+          <form action="" method="post">
+            {% csrf_token %}
+            {% if error %}
+            <script>
+              alert("Invalid credentials");
+            </script>
+            {% endif %}
+            <div class="form-header">
+              <p><b>Forgotten your password? Enter your email address below, and we'll email instructions for setting a new one.</b></p>
+            </div>
+            <div class="form-group">
+              <label for="username">Enter your Email Below</label>
+              {{ form }}
+            </div>
+            <div>
+              <button class="btn btn-block" name="Send email">Send Mail</button>
+            </div>
+          </form>
         </div>
-        <div class="form-group">
-          <label for="username" >Enter your Email Below </label>
-          {{form}}
-        </div>
-    
-        <div>
-            <button class="btn btn-block bg-info" name="Send email">Send Mail</button>
-        </div>
-       
-      </form>
-
-
-    
-  </div>
-  </div>
-</div>
-
-    
+      </div>
+    </div>
   </body>
 </html>
