--- a/accounts/templates/home.html
+++ b/accounts/templates/home.html
@@ -201,25 +201,14 @@
             </div>
             <ul class="nav-links">
                     <li><a  href="{% url 'pro' %}" style="text-decoration:  inherit;">Profile</a></li>
-
                     <li> <a href="{% url 'courseregpython' %}" style="text-decoration:  inherit; ">Python</a></li>
-
-
-
-
                     <li> <a  href="{% url 'coursereghtml' %}" style="text-decoration: inherit;">HTML</a></li>
-
-
-
-
                     <li><a  href="{% url 'courseregphp' %}" style="text-decoration:  inherit;">PHP</a></li>
-
-
 
                 <li><a   href="{% url 'project_list' %}" style="text-decoration: inherit;">Projects</a></li>
 <!--                    <div class="dropdown-content">-->
 <!--&lt;!&ndash;                        <a href="{% url 'upload_projectmain' %}">Upload Project</a>&ndash;&gt;-->
-<!--                        <a href="#">View Projects</a>-->
+<!--                        <a href="">View Projects</a>-->
 <!--                    </div>-->
 
                 <li><a   href="{% url 'ProgressCard' %}" style="text-decoration:  inherit;">Progress Report</a></li>
