--- a/Faculty/templates/facultyindex.html
+++ b/Faculty/templates/facultyindex.html
@@ -207,6 +207,11 @@ nav.open ~ .overlay {
                     <span class="link">View Videos</span>
                 </a>
             </li>
+            <li class="list">
+              <a href="{% url 'onlineclass' %}" class="nav-link">
+                  <i class="bx bx-video icon"></i>
+                  <span class="link">Online Class</span>
+              </a>
             </ul>
             <div class="bottom-cotent">
   <!--            <li class="list">-->
