--- a/exam/templates/advanced.html
+++ b/exam/templates/advanced.html
@@ -98,6 +98,16 @@
                 padding: 20px;
                 margin-bottom: 20px;
             }
+                                            #countdown {
+            position: fixed;
+            top: 100px;
+            right: 40px;
+            z-index: 9999;
+            background-color: rgba(245, 157, 122);
+            padding: 5px 10px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
        </style>
    </head>
    <body >
@@ -160,7 +170,7 @@
 {% for score in score %}
     {% if score.score > 7 and score.section == 'Intermediate' %}
     {% if total_marks is  None %}
-<form method="post" action="{% url 'adv' %}">
+<form method="post" action="{% url 'adv' %}" id="testForm">
     {% csrf_token %}
     
     
@@ -185,6 +195,7 @@
         </div>
         <div class="col"></div>
     </div>
+                       <div id="countdown" ></div>
 </form>
 {% endif %}
 {% endif %}
@@ -192,5 +203,26 @@
 </div>
 
 </body>
+<script>
+            // Countdown timer
+        var timeLeft = 600; // 10 minutes in seconds
+        var timerInterval;
+
+        function startTimer() {
+            timerInterval = setInterval(function() {
+                timeLeft--;
+                var minutes = Math.floor(timeLeft / 60);
+                var seconds = timeLeft % 60;
+                document.getElementById('countdown').innerText = minutes + 'm ' + seconds + 's';
+
+                if (timeLeft === 0) {
+                    clearInterval(timerInterval);
+                    document.getElementById('testForm').submit();
+                }
+            }, 1000);
+        }
+
+        startTimer();
+</script>
 </html>
 
