--- a/exam/templates/intermediate.html
+++ b/exam/templates/intermediate.html
@@ -103,6 +103,16 @@
             padding: 20px;
             margin-bottom: 20px;
         }
+                                    #countdown {
+            position: fixed;
+            top: 100px;
+            right: 40px;
+            z-index: 9999;
+            background-color: rgba(245, 157, 122);
+            padding: 5px 10px;
+            border-radius: 5px;
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        }
        </style>
    </head>
    <body >
@@ -137,7 +147,7 @@
                     </ol>
         </div>
         {% else  %}
-        <div id="alertMessage" class="alert warning">
+        <div id="alertMessage1" class="alert warning">
             <p class="message">You did not pass this section.</p>
             <p>Revise and try again to proceed.</p>
             <a href="{% url 'i_learn' %}" class="next-section">Try Again</a>
@@ -149,7 +159,7 @@
 {% for score in score %}
     {% if score.score > 7 and score.section == 'Basic' %}
     {% if total_marks is  None %}
-<form method="post" action="{% url 'inter' %}">
+<form method="post" action="{% url 'inter' %}"  id="testForm">
     {% csrf_token %}
 
     {% for question_data in random_questions %}
@@ -173,6 +183,7 @@
         </div>
         <div class="col"></div>
     </div>
+                   <div id="countdown" ></div>
 </form>
 {% endif %}
 {% endif %}
@@ -181,5 +192,26 @@
 </div>
 
 </body>
+<script>
+            // Countdown timer
+        var timeLeft = 600; // 10 minutes in seconds
+        var timerInterval;
+
+        function startTimer() {
+            timerInterval = setInterval(function() {
+                timeLeft--;
+                var minutes = Math.floor(timeLeft / 60);
+                var seconds = timeLeft % 60;
+                document.getElementById('countdown').innerText = minutes + 'm ' + seconds + 's';
+
+                if (timeLeft === 0) {
+                    clearInterval(timerInterval);
+                    document.getElementById('testForm').submit();
+                }
+            }, 1000);
+        }
+
+        startTimer();
+</script>
 </html>
 
