--- a/exam2/templates/htmlintro.html
+++ b/exam2/templates/htmlintro.html
@@ -251,10 +251,12 @@ HTML5 introduced semantic elements such as <strong>&lt;header&gt;</strong>, <str
             <div class="center-align">
                 <a href="{% url 'basichtml' %}" class="btn btn-danger col-3 mx-auto" tabindex="-1" role="button" aria-disabled="true">Click here to START TEST</a>
             </div>
-
+            {% endif %}
     <div class="vstack gap-3">
+                <div class="p-2"><a href="{% url 'puzzle2' %}">Game</a></div>
+        {% if not uploaded_files %}
         <div class="p-2"><a href="{% url 'basichtml' %}">Basic Section</a></div>
-        <div class="p-2"><a href="{% url 'puzzle2' %}">Game</a></div>
+
         {% for i in data %}
             {% if i.section == 'BasicHTML' and i.score > 7 %}
                 <div class="p-2"><a href="{% url 'interhtml' %}">Intermediate</a></div>                  
@@ -269,9 +271,10 @@ HTML5 introduced semantic elements such as <strong>&lt;header&gt;</strong>, <str
             {% endif %}
 
         {% endfor %}
+        {% endif %}
 
     </div>
-            {% endif %}
+
 
         </div>
     </div>
