--- a/exam3/templates/phpintro.html
+++ b/exam3/templates/phpintro.html
@@ -317,8 +317,10 @@ PHP (Hypertext Preprocessor) is a widely-used open-source server-side scripting 
             <div class="center-align">
                 <a href="{% url 'basicphp' %}" class="btn btn-danger col-3 mx-auto" tabindex="-1" role="button" aria-disabled="true">Click here to START TEST</a>
             </div>
+            {% endif %}
 <br>
         <div class="vstack gap-3">
+             {% if not uploaded_files %}
             <div class="p-2"><a href="{% url 'basicphp' %}">Basic Section</a></div>
             <div class="p-2"><a href="{% url 'puzzle3' %}">Game</a></div>
             {% for i in data %}
@@ -333,9 +335,9 @@ PHP (Hypertext Preprocessor) is a widely-used open-source server-side scripting 
                     <div class="p-2"><a href="{% url 'upload_project3' %}">Project</a></div> 
                 {% endif %}        
             {% endfor %}
-    
+    {% endif %}
         </div>
-            {% endif %}
+
 
 <!--        {% if data.section != 'BasicPHP' and i.score < 7 %}-->
 <!--        <div class="p-2"><a href="#">Intermediate</a></div>-->
