--- a/exam/templates/advanced.html
+++ b/exam/templates/advanced.html
@@ -127,7 +127,7 @@
         <div id="alertMessage" class="alert success">
             <p class="message">You successfully passed this section!</p>
             <p>Attend the next section to continue.</p>
-            <a href="{% url 'h' %}" class="next-section" >Finish</a>
+            <a href="{% url 'pythonintro' %}" class="next-section" >Finish</a>
         </div>
      <div class="questions-container">
 
