--- a/exam2/templates/advanced_html.html
+++ b/exam2/templates/advanced_html.html
@@ -130,7 +130,7 @@
         <div id="alertMessage" class="alert success mb-4">
             <p class="message">You successfully passed this section!</p>
             <p>Attend the next section to continue.</p>
-            <a href="{% url 'h' %}" class="next-section">Finish</a>
+            <a href="{% url 'htmlintro' %}" class="next-section">Finish</a>
         </div>
 
      <div class="questions-container">
