--- a/exam3/templates/advanced_php.html
+++ b/exam3/templates/advanced_php.html
@@ -131,7 +131,7 @@
         <div id="alertMessage" class="alert success mb-4">
             <p class="message">You successfully passed this section!</p>
             <p>Attend the next section to continue.</p>
-            <a href="{% url 'h' %}" class="next-section">Go to Next Section</a>
+            <a href="{% url 'phpintro' %}" class="next-section">Go to Next Section</a>
         </div>
          <div class="questions-container">
 
